feat: add friendly config loading and first-run configuration wizard
- Add ConfigLoader with 8-level priority chain (CLI, env, properties, .env)
- Add ConfigWizard for interactive first-run LLM configuration
- Add ConfigDoctor for diagnostics (Java version, config, dirs, LLM connectivity)
- Add ConfigCommand (/config status|show|path|init|doctor|test-llm|set)
- Refactor AppConfig to accept ConfigLoader.Result, add isLlmConfigured/maskedApiKey
- Add CLI arg support to Main (--config, --init-config, --doctor, --no-wizard, --help)
- Add LLM availability checks to ChatCommand and SimCommand
- Make OpenAiLlmClient.isAvailable() truth-check config instead of always true
- Support both properties and .env files with proper precedence
- Mask API keys in all output (show first 2 + last 2 chars only)
- Add config-template.properties resource and update .gitignore
- Add ConfigLoaderTest with 18 tests covering priority chain, parsing, masking

Co-Authored-By: Claude <noreply@anthropic.com>